# credit-scoring-app

./: .gitignore  FolderSturcture.md  README.md  day_by_day_to_do.md  docker-compose.yaml  todo.md
database/: pyproject.toml
database/src/: cli.py
database/src/dbtools/: __init__.py  cli.py  create_tables.py  features_aggregation.py  logging_utils.py  pd_calc_db.py  raw_loader.py
database/src/dbtools/sql/: application_base.sql  bureau_features.sql  final_ml_applicant_features.sql  installments_features.sql  pos_features.sql  previous_application_features.sql  scripts.sql
frontend/: app.js  index.html  style.css
gateway/: Dockerfile  go.mod  main.go
gateway/schema/: catboost_production_bundle.json
ml-service/: Dockerfile  main.py  pyproject.toml
ml-service/models/: catboost_production_bundle.json
ml-service/src/: feature_selection.py  pipeline.py  preprocessing.py
ml-service/test_src/: fs.py
